# MeshDash

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  app.py  pyproject.toml  requirements.txt
static/: app.js  manifest.webmanifest  style.css  sw.js
templates/: index.html  login.html
tests/: test_api.py
