[project]
name = "meshdash"
version = "1.0.0"
description = "Local web control deck for a USB-connected MeshCore companion node"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "meshcore>=2.3",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
